fix: remove scrollbar for firefox

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,10 @@
   display: none;
 }
 
+.scrollable-container {
+  scrollbar-width: none;
+}
+
 .crit {
   position: relative;
   font-size: 13px;
